@@ -1,6 +1,7 @@
 VERSION         DESCRIPTION
 -----------------------------------------------------------------------------
               - new --help, --encoding and --authors-file options
+              - add "hashed" support (see darcs init -h)
 0.4           - add incremental conversion support
 0.3           - add darcs2 support
 0.2           - add bzr and hg support
